[package]
edition = "2021"
name = "jean_cut"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
jean_core = {version = "0.1.0", path = "../jean_core"}
lazy_static = "1.4.0"
pest = "2.5.0"
pest_derive = "2.5.0"

[dev-dependencies]
jean = {version = "0.1.0", path = "../jean", features = ["io", "macros"]}
